info/03-freedriving_testdone/RemoteApi/include/DianaAPI.h

DIANA_API int getWayPoint(const char *waypointName, double *dblTcppos, double *dblJoints,
                          /*IN*/ const char *strIpAddress = "");
DIANA_API int setWayPoint(const char *waypointName, double *dblTcppos, double *dblJoints,
                          /*IN*/ const char *strIpAddress = "");
DIANA_API int addWayPoint(const char *waypointName, double *dblTcppos, double *dblJoints,
                          /*IN*/ const char *strIpAddress = "");
DIANA_API int deleteWayPoint(const char *waypointName, /*IN*/ const char *strIpAddress = "");
DIANA_API int inverseClosedFull(/*IN[6]*/ const double *pose, /*IN*/ const int lock_joint_index,
                                /*IN*/ const double lock_joint_position, /*IN[7]*/ double *ref_joints,
                                /*IN[6]*/ double *active_tcp = nullptr, /*IN*/ const char *strIpAddress = "");
DIANA_API int getInverseClosedResultSize(/*IN*/ const int id, /*IN*/ const char *strIpAddress = "");
DIANA_API int getInverseClosedJoints(/*IN*/ const int id, /*IN*/ const int index, /*OUT*/ double *joints,
                                     /*IN*/ const char *strIpAddress = "");
DIANA_API int destoryInverseClosedItems(/*IN*/ const int id, /*IN*/ const char *strIpAddress = "");
DIANA_API int calculateJacobi(/*OUT[6*JOINT_COUNT]*/ double *dblJacobiMatrix, /*IN[7]*/ const double *dblJointPosition,
                              /*IN*/ int intJointCount, /*IN*/ const char *strIpAddress = "");
DIANA_API int calculateJacobiTF(/*OUT[6*JOINT_COUNT]*/ double *dblJacobiMatrix,
                                /*IN[7]*/ const double *dblJointPosition,
                                /*IN*/ int intJointCount, /*IN[6]*/ double *active_tcp = nullptr,
                                /*IN*/ const char *strIpAddress = "");
DIANA_API int getTcpForceInToolCoordinate(/*OUT[6]*/ double *forces, /*IN*/ const char *strIpAddress = "");
DIANA_API int speedLOnTcp(/*IN[6]*/ double *speed, /*IN[2]*/ double *a, /*option*/ double t,
                          /*IN[6]*/ double *active_tcp = nullptr, /*IN*/ const char *strIpAddress = "");
DIANA_API int inverseClosedIdeal(/*IN[6]*/ const double *pose, /*IN*/ const double lock_robot_arm_angle,
                                 /*IN[7]*/ double *ref_joints, /*IN[6]*/ double *active_tcp = nullptr,
                                 /*IN*/ const char *strIpAddress = "");
DIANA_API int getInverseClosedIdealResultSize(/*IN*/ const int id, /*IN*/ const char *strIpAddress = "");
DIANA_API int getInverseClosedIdealJoints(/*IN*/ const int id, /*IN*/ const int index, /*OUT*/ double *joints,
                                          /*IN*/ const char *strIpAddress = "");
DIANA_API int destoryInverseClosedIdealItems(/*IN*/ const int id, /*IN*/ const char *strIpAddress = "");
DIANA_API int getSixAxisZeroOffset(/*OUT[10]*/ double *dblZeroOffset, /*IN*/ const char *strIpAddress = "");
DIANA_API int setSixAxisZeroOffset(/*IN[10]*/ double *dblZeroOffset, /*IN*/ const char *strIpAddress = "");
DIANA_API int setDefaultActiveWorkpiece(/*IN[16]*/ double *dblWop, /*IN*/ const char *strIpAddress = "");