info/03-freedriving_testdone/RemoteApi/lib/DianaApi.py


def inverseClosedFull(pose, lock_joint_index, lock_joint_position, ref_joints, active_tcp, ipAddress=''):
    refJointsPosition = DIANA_JOINTS_POSITION()
    refJointsPosition.values = (c_double * 7)()
    for index in range(0, len(ref_joints)):
        refJointsPosition.values[index] = ref_joints[index]
    dianaPose = DIANA_TCP_POSE()
    dianaPose.values = (c_double * 6)()
    for index in range(0, len(pose)):
        dianaPose.values[index] = pose[index]
    arrActiveTcp = DIANA_ACTIVE_TCP()
    arrActiveTcp.values = (c_double*6)()
    for index in range(0, len(arrActiveTcp.values)):
        arrActiveTcp.values[index] = active_tcp[index]
    api_mod.inverseClosedFull.argtypes = [POINTER(DIANA_TCP_POSE),c_int,c_double,POINTER(DIANA_JOINTS_POSITION),POINTER(DIANA_ACTIVE_TCP), c_char_p]
    api_mod.inverseClosedFull.restype = c_int
    id = api_mod.inverseClosedFull(byref(dianaPose),lock_joint_index,lock_joint_position,refJointsPosition, byref(arrActiveTcp), bytes(ipAddress.encode('utf-8')))
    return id

def getInverseClosedResultSize(id, ipAddress=''):
    api_mod.getInverseClosedResultSize.argtypes = [c_int, c_char_p]
    api_mod.getInverseClosedResultSize.restype = c_int
    size = api_mod.getInverseClosedResultSize(id, bytes(ipAddress.encode('utf-8')))
    return size

def getInverseClosedJoints(id, index, joints, ipAddress=''):
    dianaJoints = DIANA_JOINTS_POSITION()
    dianaJoints.values = (c_double * 7)()
    api_mod.getInverseClosedJoints.argtypes = [c_int, c_int, POINTER(DIANA_JOINTS_POSITION), c_char_p]
    api_mod.getInverseClosedJoints.restype = c_int
    size = api_mod.getInverseClosedJoints(id, index, dianaJoints, bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(joints)):
        joints[index] = dianaJoints.values[index]
    return size

def destoryInverseClosedItems(id, ipAddress=''):
    api_mod.destoryInverseClosedItems.argtypes = [c_int, c_char_p]
    api_mod.destoryInverseClosedItems.restype = c_int
    ret = api_mod.destoryInverseClosedItems(id, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def calculateJacobi(matrixJacobi, joints, ipAddress=''):
    dianaJoints = DIANA_JOINTS_POSITION()
    dianaJoints.values = (c_double * 7)()
    for index in range(0, len(joints)):
        dianaJoints.values[index] = joints[index]
    dianaJacobiMatrix = DIANA_JACOBI_MATRIX()
    dianaJacobiMatrix.values = (c_double * 42)()
    api_mod.calculateJacobi.argtypes = [POINTER(DIANA_JACOBI_MATRIX), POINTER(DIANA_JOINTS_POSITION), c_int, c_char_p]
    api_mod.calculateJacobi.restype = c_int
    ret = api_mod.calculateJacobi(byref(dianaJacobiMatrix), dianaJoints, 7, bytes(ipAddress.encode('utf-8')))
    if ret < 0:
        return message(ret)
    for index in range(0, len(matrixJacobi)):
        matrixJacobi[index] = dianaJacobiMatrix.values[index]
    return message(ret)
                             
def calculateJacobiTF(matrixJacobi, joints, toolMatrix, ipAddress=''):
    dianaJoints = DIANA_JOINTS_POSITION()
    dianaJoints.values = (c_double * 7)()
    for index in range(0, len(joints)):
        dianaJoints.values[index] = joints[index]
    dianaToolMatrix = DIANA_ACTIVE_TCP()
    dianaToolMatrix.values = (c_double * 6)()
    for index in range(0, len(toolMatrix)):
        dianaToolMatrix.values[index] = toolMatrix[index]
    dianaJacobiMatrix = DIANA_JACOBI_MATRIX()
    dianaJacobiMatrix.values = (c_double * 42)()
    api_mod.calculateJacobiTF.argtypes = [POINTER(DIANA_JACOBI_MATRIX),POINTER(DIANA_JOINTS_POSITION), c_int, POINTER(DIANA_ACTIVE_TCP), c_char_p]
    api_mod.calculateJacobiTF.restype = c_int
    ret = api_mod.calculateJacobiTF(byref(dianaJacobiMatrix), dianaJoints, 7, dianaToolMatrix, bytes(ipAddress.encode('utf-8')))
    if ret < 0 :
        return message(ret)
    for index in range(0, len(matrixJacobi)):
        matrixJacobi[index] = dianaJacobiMatrix.values[index]
    return message(ret)

def getTcpForceInToolCoordinate(forces, ipAddress=''):
    dianaTcpForce = DIANA_TCP_FORCE()
    dianaTcpForce.values = (c_double * 6)()
    api_mod.getTcpForceInToolCoordinate.argtypes = [POINTER(DIANA_TCP_FORCE), c_char_p]
    api_mod.getTcpForceInToolCoordinate.restype = c_int
    ret = api_mod.getTcpForceInToolCoordinate(byref(dianaTcpForce),
                              bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(dianaTcpForce.values)):
        forces[index] = dianaTcpForce.values[index]
    return message(ret)

def speedLOnTcp(speed, acc, t=0.0, ipAddress=''):
    dianaJointsSpeed = DIANA_JOINTS_SPEED_L()
    dianaJointsSpeed.values = (c_double * 6)()
    for index in range(0, len(dianaJointsSpeed.values)):
        dianaJointsSpeed.values[index] = speed[index]
    dianaJointsAcc = DIANA_JOINTS_ACC()
    dianaJointsAcc.values = (c_double * 2)()
    for index in range(0, len(dianaJointsAcc.values)):
        dianaJointsAcc.values[index] = acc[index]
    active_tcp = c_void_p(0)
    api_mod.speedLOnTcp.argtypes = [POINTER(DIANA_JOINTS_SPEED_L), POINTER(
        DIANA_JOINTS_ACC), c_double, c_void_p, c_char_p]
    api_mod.speedLOnTcp.restype = c_int
    ret = api_mod.speedLOnTcp(dianaJointsSpeed, dianaJointsAcc,
                            t, active_tcp, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def inverseClosedIdeal(pose, lock_robot_arm_angle, ref_joints, active_tcp, ipAddress=''):
    refJointsPosition = DIANA_JOINTS_POSITION()
    refJointsPosition.values = (c_double * 7)()
    for index in range(0, len(ref_joints)):
        refJointsPosition.values[index] = ref_joints[index]
    dianaPose = DIANA_TCP_POSE()
    dianaPose.values = (c_double * 6)()
    for index in range(0, len(pose)):
        dianaPose.values[index] = pose[index]
    arrActiveTcp = DIANA_ACTIVE_TCP()
    arrActiveTcp.values = (c_double*6)()
    for index in range(0, len(arrActiveTcp.values)):
        arrActiveTcp.values[index] = active_tcp[index]
    api_mod.inverseClosedIdeal.argtypes = [POINTER(DIANA_TCP_POSE),c_double,POINTER(DIANA_JOINTS_POSITION),POINTER(DIANA_ACTIVE_TCP), c_char_p]
    api_mod.inverseClosedIdeal.restype = c_int
    id = api_mod.inverseClosedIdeal(byref(dianaPose),lock_robot_arm_angle,refJointsPosition, byref(arrActiveTcp), bytes(ipAddress.encode('utf-8')))
    return id

def getInverseClosedIdealResultSize(id, ipAddress=''):
    api_mod.getInverseClosedIdealResultSize.argtypes = [c_int, c_char_p]
    api_mod.getInverseClosedIdealResultSize.restype = c_int
    size = api_mod.getInverseClosedIdealResultSize(id, bytes(ipAddress.encode('utf-8')))
    return size

def getInverseClosedIdealJoints(id, index, joints, ipAddress=''):
    dianaJoints = DIANA_JOINTS_POSITION()
    dianaJoints.values = (c_double * 7)()
    api_mod.getInverseClosedIdealJoints.argtypes = [c_int, c_int, POINTER(DIANA_JOINTS_POSITION), c_char_p]
    api_mod.getInverseClosedIdealJoints.restype = c_int
    size = api_mod.getInverseClosedIdealJoints(id, index, dianaJoints, bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(joints)):
        joints[index] = dianaJoints.values[index]
    return size

def destoryInverseClosedIdealItems(id, ipAddress=''):
    api_mod.destoryInverseClosedIdealItems.argtypes = [c_int, c_char_p]
    api_mod.destoryInverseClosedIdealItems.restype = c_int
    ret = api_mod.destoryInverseClosedIdealItems(id, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def getWayPoint(waypointName, dblTcppos, dblJoints, strIpAddress=''):
    tcpPose = DIANA_TCP_POSE()
    tcpPose.values = (c_double * 6)()
    joints = DIANA_JOINTS_POSITION()
    joints.values = (c_double * 7)()
    api_mod.getWayPoint.argtypes = [c_char_p, POINTER(DIANA_TCP_POSE), POINTER(DIANA_JOINTS_POSITION), c_char_p]
    api_mod.getWayPoint.restype = c_int
    ret = api_mod.getWayPoint(bytes(waypointName.encode('utf-8')), tcpPose, joints, bytes(strIpAddress.encode('utf-8')))
    for index in range(0, len(dblTcppos)):
        dblTcppos[index] = tcpPose.values[index]
    for index in range(0, len(dblJoints)):
        dblJoints[index] = joints.values[index]
    return ret

def setWayPoint(waypointName, dblTcppos, dblJoints, strIpAddress=''):
    tcpPose = DIANA_TCP_POSE()
    tcpPose.values = (c_double * 6)()
    for index in range(0, len(dblTcppos)):
        tcpPose.values[index] = dblTcppos[index]
    joints = DIANA_JOINTS_POSITION()
    joints.values = (c_double * 7)()
    for index in range(0, len(dblJoints)):
        joints.values[index] = dblJoints[index]
    api_mod.setWayPoint.argtypes = [c_char_p, POINTER(DIANA_TCP_POSE), POINTER(DIANA_JOINTS_POSITION), c_char_p]
    api_mod.setWayPoint.restype = c_int
    ret = api_mod.setWayPoint(bytes(waypointName.encode('utf-8')), tcpPose, joints, bytes(strIpAddress.encode('utf-8')))
    return ret

def addWayPoint(waypointName, dblTcppos, dblJoints, ipAddress=''):
    dianaTcpPose = DIANA_TCP_POSE()
    dianaTcpPose.values = (c_double * 6)()
    for index in range(0, len(dblTcppos)):
        dianaTcpPose.values[index] = dblTcppos[index]
    dianaJointPos = DIANA_JOINTS_POSITION()
    dianaJointPos.values = (c_double * 7)()
    for index in range(0, len(dblJoints)):
        dianaJointPos.values[index] = dblJoints[index]
    api_mod.addWayPoint.restype = c_int
    api_mod.addWayPoint.argtypes = [
        c_char_p, POINTER(DIANA_TCP_POSE), POINTER(DIANA_JOINTS_POSITION), c_char_p]
    ret = api_mod.addWayPoint(
        bytes(waypointName.encode('utf-8')), dianaTcpPose, dianaJointPos, bytes(ipAddress.encode('utf-8')))
    return message(ret)


def deleteWayPoint(waypointName, ipAddress=''):
    api_mod.deleteWayPoint.argtypes = [c_char_p, c_char_p]
    api_mod.deleteWayPoint.restype = c_int
    ret = api_mod.deleteWayPoint(
        bytes(waypointName.encode('utf-8')), bytes(ipAddress.encode('utf-8')))
    return message(ret)

def getSixAxisZeroOffset(offset, ipAddress=''):
    dianaSixAxisZeroOffset = DIANA_SIX_AXIS_ZERO_OFFSET()
    dianaSixAxisZeroOffset.values = (c_double * 10)()
    api_mod.getSixAxisZeroOffset.argtypes = [POINTER(DIANA_SIX_AXIS_ZERO_OFFSET), c_char_p]
    api_mod.getSixAxisZeroOffset.restype = c_int
    ret = api_mod.getSixAxisZeroOffset(dianaSixAxisZeroOffset, bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(dianaSixAxisZeroOffset.values)):
        offset[index] = dianaSixAxisZeroOffset.values[index]
    return message(ret)

def setSixAxisZeroOffset(offset, ipAddress=''):
    dianaSixAxisZeroOffset = DIANA_SIX_AXIS_ZERO_OFFSET()
    dianaSixAxisZeroOffset.values = (c_double * 10)()
    for index in range(0, len(offset)):
        dianaSixAxisZeroOffset.values[index] = offset[index]
    api_mod.setSixAxisZeroOffset.argtypes = [POINTER(DIANA_SIX_AXIS_ZERO_OFFSET), c_char_p]
    api_mod.setSixAxisZeroOffset.restype = c_int
    ret = api_mod.setSixAxisZeroOffset(dianaSixAxisZeroOffset, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def setDefaultActiveWorkpiece(defaultWorkpiece, ipAddress=''):
    defaultWop = DIANA_DEFAULT_WOP()
    defaultWop.values = (c_double*16)()
    for index in range(0, len(defaultWop.values)):
        defaultWop.values[index] = defaultWorkpiece[index]
    api_mod.setDefaultActiveWorkpiece.argtypes = [
        POINTER(DIANA_DEFAULT_WOP), c_char_p]
    api_mod.setDefaultActiveWorkpiece.restype = c_int
    ret = api_mod.setDefaultActiveWorkpiece(
        defaultWop, bytes(ipAddress.encode('utf-8')))
    if(ret == 0):
        print("setDefaultActiveWorkpiece succeeded")
        return True
    else:
        print("setDefaultActiveWorkpiece failed")
        return False
